updated deploy scripts
